css/style.css
/* ... */
@media screen and (max-width: 46em) {
  
  #hero-text h2, #closing h4 {
    min-width: 0;
    width: auto;
  }
}

@media screen and (max-width: 37.5em) {
  #hero.hero-1, #hero.hero-2, #hero.hero-3, #hero.hero-4, #hero.hero-5, #hero.hero-6 {
    background: transparent;
  }
}

@media screen and (max-width: 37.5em) {
  html, body {
    margin: 0;
    padding: 0;
  }
  #container {
    border-radius: 0;
  }
  header {
    -webkit-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-justify-content: center;
    justify-content: center;
  }
  header, .grid .whole, .content {
    padding: 1.125em;
  }
  .mobile {
    width: 100%;
    display: block;
  }
  #hero-text {
    padding: 0em;
    text-align: center;
  }
  header nav {
    padding: 1em 1em 0 1em;
    width: 100%;
    text-align: center;
    font-size: 0.750em;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
  }
  header nav a {
    border-bottom: 2px solid transparent;
  }
  #hero-text h1 {
    font-size: 1.750em;
    padding: 0 0.750em;
  }
  #hero-text h2, #gallery h3 {
    font-size: 0.875em;
  }
  #hero-text h2 {
    padding: 0em 1em 1em 1.250em;
  }
  #hero-text .options {
    max-width: none;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-justify-content: center;
    justify-content: center;
    -webkit-align-items: center;
    align-items: center;
    -webkit-flex-wrap: wrap;
    flex-wrap: wrap;
    /* padding-left: 1em; */
  }
  #hero-text .options a.telephone {
    box-shadow: inset 0 0 0 2px rgba(193, 146, 67, 0.25);
    color: #fff;
    background: #fff;
    color: #c19344;
    border: 0;
    padding: 0.75em 1em;
    border-radius: 100px;
    margin-left: 0.75em;
    font-weight: 500;
  }
  .custom-select {
    margin: 0 20px 20px 20px;
  }
  #closing .options {
    max-width: 150px;
  }
  #closing .options a.telephone {
    margin-top: 0.5em;
    display: inline-block;
  }
  .material-icons {
    font-size: 16px;
  }
  .btn {
    font-size: 0.813em;
  }
  #about, #closing, #brentwood-contact, #tuxedo-contact {
    padding: 1.5em;
  }
  #closing .book-online {
    padding-top: 1.250em;
  }
  #brentwood-contact h5, #tuxedo-contact h5 {
    padding: 1.250em;
  }
  #brentwood-contact, #tuxedo-contact {
    padding-top: 0;
  }
  #about h3, #closing h4 {
    max-width: none;
    font-size: 1.250em;
  }
  #reviews h3 {
    font-size: 0.875em;
  }
  #gallery #instafeed {
    padding: 0 1.5em 1.5em 1.5em;
    margin: 0;
  }
  #gallery .instagram {
    height: auto;
    width: calc(50% - 10px);
    margin: 20px 0 0 0;
  }
  .card {
    font-size: 0.875em;
    height: 260px;
  }
  .grid .half, .grid .one-third {
    width: 100%;
    padding: 0;
  }
  .grid .one-third.with-padding {
    padding: 0;
    width: 100%;
  }
  .grid .one-third:nth-child(2), .grid .one-third:last-child {
    padding-top: 1.250em;
    padding-bottom: 0;
  }
  .member {
    width: 100%;
  }
  .member img {
    width: 80px;
    height: 80px;
  }
  footer {
    padding-top: 1.250em;
  }
  .content form input:first-of-type {
    margin-bottom: 1em;
  }
}

@media screen and (max-width: 22em) {
  col.first{ width:60%;}
  col.second{ width:40%;}
  col.firstlong{ width:80%;}
  col.secondlong{width: 20%;}
  #hero-text .options {
    -webkit-flex-wrap: wrap;
    flex-wrap: wrap;
  }
  #about, #closing, #brentwood-contact, #tuxedo-contact .grid .whole {
    padding: 1.125em;
  }
  #brentwood-contact h5, #tuxedo-contact h5, .grid .half:first-child {
    padding-bottom: 1.125em;
  }
  #hero-text .book-online .options .btn, #hero-text .options a.telephone {
    width: 100%;
    margin: 0;
  }
  #hero-text .options a.telephone {
    margin-top: 1em;
  }
  #hero-text h1 {
    font-size: 1.5em;
  }
  #about h3, #closing h4 {
    font-size: 1em;
  }
  #hero-text h2, #reviews h3 {
    font-size: 0.875em;
  }
  footer {
    padding: 1.125em 1.125em 2.6667em 1.125em;
  }
}

.price.sm {
  display: flex;
  width: 50px;
  justify-content: space-between;
}
.price::before {
  content: '$';
}

/***********************************************/
#shop {
  display: flex;
  gap: 50px;
  margin: 0 0 60px 0;
  padding: 0 30px;
  height: 300px;
  overflow: hidden;

  background-image: linear-gradient(
    to bottom,
    #ffe0ff80 0%,
    #ffffff00 60%
  );

  border-top-style: solid;
  border-top-width: 5px;
  border-top-color: #800080;
}
#shop > .card-body {
  display: block;
}
#shop .shop-banner {
  display: block;
  height: 100%;
  z-index: 1;
}
#shop .title {
  font-size: 2em;
  font-weight: bold;
}
#shop .content {
  width: 70%;
}

#shop .btn-shop {
  height: 36px;
  padding: 0 24px;
  color: white;
  border: none;
  font-weight: bold;
  background-color: #800080;
  border-radius: 18px;
  cursor: pointer;
}

#shop .btn-shop:hover {
  background-color: #990099;
}

@media screen and (max-width: 1024px) {
  #shop {
    position: relative;
    display: block;
  }
  #shop .shop-banner {
    position: absolute;
  }
  #shop .card-body {
    position: absolute;
    display: inline-block;
    padding: 20px;
    height: 100%;
    background-color: rgba(255,255,255,.9);
    z-index: 2;
  }
}


/***********************************************/
.policy {
  margin-bottom: 40px;
}
.policy > p {
  margin-bottom: 16px;
}

/***********************************************/
.page-instruction {
  padding: 0 40px;
}

